// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should match snapshot 1`] = `
Object {
  "cron": null,
  "harvestMode": "allAtOnce",
  "name": "New Source",
  "script": "newScript",
  "termsOfUse": null,
  "url": null,
}
`;

exports[`resolvers chain anon should not pass 1`] = `
Object {
  "data": Object {
    "upsertSource": null,
  },
  "errors": Array [
    [GraphQLError: You must be logged in to do this],
  ],
}
`;

exports[`resolvers chain should throw on invalid input 1`] = `
Object {
  "data": Object {
    "upsertSource": null,
  },
  "errors": Array [
    [GraphQLError: Invalid input],
  ],
}
`;

exports[`resolvers chain user should not pass 1`] = `
Object {
  "data": Object {
    "upsertSource": null,
  },
  "errors": Array [
    [GraphQLError: You are not allowed to do this],
  ],
}
`;

exports[`update should match snapshot 1`] = `
Object {
  "cron": "1 1 * * *",
  "harvestMode": "oneByOne",
  "id": "b28f728a-6efa-11e7-96fe-47a2910087ec",
  "name": "Updated source",
  "script": "updatedScript",
  "termsOfUse": "New terms of use",
  "url": "http://google.com",
}
`;
